main/default/objects/pharos__Pharos_Settings__c/pharos__Pharos_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Pharos Settings</label>
</CustomObject>