main/default/objects/pharos__Pharos_Settings__c/fields/pharos__Custom_Error_Parser__c.field-meta.xml
<CustomField>
    <fullName>pharos__Custom_Error_Parser__c</fullName>
    <label>Custom Error Parser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>