main/default/objects/pharos__Pharos_Settings__c/fields/pharos__Log_Post_Processing_Batch_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>pharos__Log_Post_Processing_Batch_Cron_Exp__c</fullName>
    <label>Log Post Processing Frequency Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>