main/default/objects/pharos__Pharos_Settings__c/fields/pharos__Slack_App_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>pharos__Slack_App_Client_Secret__c</fullName>
    <label>Slack App Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>